--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,24 @@
-*, html, body{
+/* RESET */
+*,
+html,
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body{
-  background-color: white;
+body {
+  background-color: rgb(0, 0, 0);
 }
 
+/* CSS STYLE HEADER START */
 nav .logo-icon img {
   width: 55px;
   height: 55px;
 }
 
-nav{
-  background-color: black;
+nav {
+  background-color: rgb(22, 22, 22);
   display: flex;
   justify-content: space-between;
   padding: 1rem 3rem;
@@ -27,18 +31,44 @@ nav ul {
   gap: 1rem;
 }
 
-nav ul li a{
+nav ul li a {
   text-decoration: none;
   font-family: "Poppins", serif;
   font-weight: 600;
   font-style: normal;
-  color:white;
-  transition: .1s;
+  color: white;
+  transition: 0.1s;
 }
 
-nav ul li a:hover{
-  background-color:yellow;
+nav ul li a:hover {
+  background-color: yellow;
   padding: 10px 10px;
   border-radius: 5px;
   color: black;
 }
+
+.hamburger-icon {
+  /* background-color:yellow; */
+  color: yellow;
+  font-size: 28px;
+  display: none;
+}
+
+@media only screen and (max-width: 768px) {
+  nav {
+    flex-wrap: wrap;
+  }
+  nav ul {
+    flex-direction: column;
+    width: 100%;
+  }
+  nav ul.hidden {
+    display: none;
+  }
+  .hamburger-icon {
+    display: flex;
+    align-items: center;
+  }
+}
+/* CSS STYLE HEADER END */
+
